<resources>
    <string name="app_name">Vezba</string>
    <string name="increment">Increment</string>
    <string name="launch_modes">Launch Modes</string>
    <string name="standard">Standard</string>
    <string name="single_top">Single top</string>
    <string name="single_task">Single Task</string>
    <string name="single_instance">Single Instance</string>
    <string name="image_in_dialog">Image in dialog</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="dialogs">Dialogs</string>
    <string name="pick_time">Pick time</string>
</resources>
